--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,9 @@ spring:
     properties:
       hibernate:
       # show_sql: true
-      format_sql: true
-logging.level:
-  org.hibernate.SQL: debug
+        format_sql: true
+logging:
+  level:
+    org.hibernate.SQL: debug
     # org.hibernate.type: trace
+
